# editorconfig-core-test

./: .editorconfig  .gitignore  .mailmap  BPM  CMakeLists.txt  LICENSE.txt  README.md
cli/: CMakeLists.txt
cmake/: almostcat.cmake  ec_sort.cmake  multiline_matcher.cmake  runandsort.cmake
filetree/: CMakeLists.txt  path_separator.in  root_file.in  unset.in
filetree/root_mixed/: root_file.in
filetree/unset/: unset.in
glob/: CMakeLists.txt  braces.in
meta/: CMakeLists.txt  meta.in  sample.cmake  sample.txt
pairs/: CMakeLists.txt  lowercase_names.in  lowercase_values.in
parser/: CMakeLists.txt  comments.in  empty_values.in  leading_slash.in  limits.in  truncate.in  whitespace.in
properties/: CMakeLists.txt
